# bwclient

./: .gitignore  Cargo.toml  README.md  README_CN.md  build.rs
.github/workflows/: release.yml
assets/macos/: Info.plist.template
icons/: app.icns
src/: api.rs  crypto.rs  iced_app.rs  main.rs  password_generator.rs  server.rs  totp.rs
src/api/: client.rs  types.rs  vault.rs
src/crypto/: cipherstring.rs  keys.rs  master_password.rs
src/iced_app/: view.rs
